<resources>
    <string name="app_name">Education App</string>
    <string name="app_slogan">Learn - Practice - Achieve</string>
    <string name="splash_screen_education">Learning</string>
    <string name="splash_screen_app">Lapp</string>
    <string name="app_desc">Learn and master the most in-demand skills to advance your career in the fastest-growing fields.\nParticipate in lots of different project.\nApply for company placement that is suitable for you.</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="dob">Date of birth</string>
    <string name="about">About</string>
    <string name="email">Email Address</string>
    <string name="programming">Programming Language</string>
</resources>
